force-app/main/default/objects/Messaging_Secrets__c/Messaging_Secrets__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Secretos de la organización utilizados para validar los webhooks de mensajería. Los valores no se incluyen en el repositorio.</description>
    <label>Messaging Secrets</label>
</CustomObject>