force-app/main/default/objects/Messaging_Secrets__c/fields/Twilio_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Auth_Token__c</fullName>
    <label>Twilio Auth Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>