force-app/main/default/objects/Messaging_Secrets__c/fields/WhatsApp_App_Secret__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_App_Secret__c</fullName>
    <description>App Secret de Meta utilizado para validar X-Hub-Signature-256.</description>
    <label>WhatsApp App Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>