force-app/main/default/objects/Messaging_Secrets__c/fields/WhatsApp_Verify_Token__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Verify_Token__c</fullName>
    <description>Token compartido utilizado únicamente para el desafío de verificación de Meta.</description>
    <label>WhatsApp Verify Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>